Link to pages with content

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 <div class="container">
   <header>
-    <h1>Girdle</h1>
+    <h1>{{#link-to 'index'}}Girdle{{/link-to}}</h1>
   </header>
   {{outlet}}
   <footer>
