--- a/app/templates/components/admin-tile.hbs
+++ b/app/templates/components/admin-tile.hbs
@@ -1,4 +1,4 @@
 
 {{#link-to 'article' article.id}}{{article.title}}{{/link-to}}
-<button {{action 'edit'}}>Edit</button>
+{{update-article article=article edit="edit"}}
 <button {{action 'delete' article}}>Delete</button>
