add carousel and background image and some styling

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,9 @@
 <div class="container">
-  <header>
-    <h1>{{#link-to 'index'}}Girdle{{/link-to}}</h1>
-  </header>
+  <div class="row">
+    <div class="col-sm-12" id="header">
+      <h1>{{#link-to 'index'}}Girdle{{/link-to}}</h1>
+    </div>
+  </div>
   {{outlet}}
   <footer>
     {{#link-to 'admin'}}Admin portal{{/link-to}}
