--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,4 +1,7 @@
-{{carousel-tile article = model}}
+<div class="center">
+  {{carousel-tile article = model}}
+</div>
+
 {{#each model as |article|}}
   {{article-tile article = article}}
 {{/each}}
