--- a/app/templates/components/article-tile.hbs
+++ b/app/templates/components/article-tile.hbs
@@ -1,9 +1,16 @@
-<div class="row article-tile">
-  <div class="col-sm-6">
-    {{#link-to 'article' article.id}}<img src={{article.image}}>{{/link-to}}
-  </div>
-  <div class="col-sm-6">
-    <h3>{{#link-to 'article' article.id}}{{article.title}}{{/link-to}}</h3>
-    <h4>{{article.author}}</h4>
+
+<div class="col s12 m7">
+  <div class="card horizontal">
+    <div class="card-image">
+      {{#link-to 'article' article.id}}<img src={{article.image}}>{{/link-to}}
+    </div>
+    <div class="card-stacked">
+      <div class="card-content">
+        <h3>{{#link-to 'article' article.id}}{{article.title}}{{/link-to}}</h3>
+      </div>
+      <div class="card-action">
+        <h4>{{article.author}}</h4>
+      </div>
+    </div>
   </div>
 </div>
