--- a/app/templates/components/article-tile.hbs
+++ b/app/templates/components/article-tile.hbs
@@ -9,7 +9,7 @@
         <h3>{{#link-to 'article' article.id}}{{article.title}}{{/link-to}}</h3>
       </div>
       <div class="card-action">
-        <h4>{{article.author}}</h4>
+        <p>by: {{article.author}}</p>
       </div>
     </div>
   </div>
