--- a/app/templates/components/article-detail.hbs
+++ b/app/templates/components/article-detail.hbs
@@ -2,3 +2,10 @@
 <h4>By: {{article.author}}</h4>
 <img src={{article.image}}>
 <p>{{article.text}}</p>
+
+<h2>Comments</h2>
+<ul>
+  {{#each article.comments as |comment|}}
+    {{comment-tile comment=comment}}
+  {{/each}}
+</ul>
