--- a/app/templates/components/admin-tile.hbs
+++ b/app/templates/components/admin-tile.hbs
@@ -1,4 +1,4 @@
 
 {{#link-to 'article' article.id}}{{article.title}}{{/link-to}}
-{{update-article article=article edit="edit"}}
+{{update-article article=article edit="edit" deleteComment="deleteComment"}}
 <button {{action 'delete' article}}>Delete</button>
